# dockwatch-lite

./: .gitignore  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
docs/: config-example.md  implementation-notes.md  roadmap.md  testing-guide.md  usage-examples.md
docs/daily-progress/: 2026-06-24.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md
src/dockwatch/: __init__.py  cli.py  monitor.py
tests/: test_dockwatch.py
